--- a/index.Rmd
+++ b/index.Rmd
@@ -1,16 +1,23 @@
 ---
-title: "Welcome to DiscomatiX - Discourse and Pragmatics Interest Group!"
+title: "Welcome to DiscomatiX"
 description:
   
 site: distill::distill_website
 ---
-We are a group of (early career) researchers working on pragmatics and discourse, broadly construed. Our aim is to bring together people working on such topics to discuss issues related to the practice of experimental research on human language use and communication.
 
-Our group is specifically focused on meta-theoretical issues related to how the practice of experimental pragmatic and discourse research is constrained by the different frameworks found in the field (i.e. Neo- and Post-Gricean pragmatics, discourse representation theories, information theory, etc.). We are also interested in concrete issues related to linking abstract theoretical constructs to empirical measures, and how that affects the design and setup of experiments. Our ultimate goals are:
+## Who?
 
-* to critically assess the (in)compatibility of different conceptual frameworks available in the field from the perspective of applied empirical practice;
+We are a group of (early career) researchers working on **disc**ourse and prag**mati**cs using e**x**perimental approaches. Our group is specifically focused on the interface between theoretical and empirical approaches. Continue reading to learn more about what we mean by this.
 
-* to work with the community towards developing best practices for designing experimental tasks which are both ecologically valid and theoretically stringent but also fitting for the specific purposes of sub-communities working on pragmatic and discourse phenomena.
+## What? 
 
-If you're curious and would like to know more, join one of our upcoming meetings or drop us a line. We would love to hear from you!
+We bring together interested researchers in the fields of discourse and pragmatics to exchange ideas and experiences. Through these encounters, we aim to:
 
+* critically assess the (in)compatibility of different theoretical frameworks in the field of discourse and pragmatics
+* develop best practices for empirically testing theoretical predictions in ecologically valid and theoretically stringent tasks
+
+Our first step is an on-line series, in which invited speakers discuss issues related to the above topics and researchers will have the opportunity to engage in discussion.
+
+## Why?
+
+The field of discourse and pragmatics is characterized by many different frameworks (i.e. Neo- and Post-Gricean pragmatics, discourse representation theories, RSA, etc.). We believe that empirical approaches can help to further develop these theories, but applying well-known psycholinguistic techniques in this area is challenging for two reasons: first, the gap between abstract theoretical constructs testable predictions is large; second, the contextual nature of discourse and pragmatics is difficult to implement with experimental paradigms that have been optimized for word- and sentence processing. Plausible communicative contexts are crucial for eliciting natural pragmatic behavior and generalizing our findings, but negatively influences the experimental control crucial for replicability. Through this interest group, we hope to contribute to aligning different frameworks and enhancing experimental approaches. 
