Update team.Rmd with Marian's bio draft

--- a/team.Rmd
+++ b/team.Rmd
@@ -6,6 +6,8 @@ Our interest group was founded in 2023 by Clare Patterson, Marian Marchal, and V
 
 Clare XX
 
-Marian XX
+Marian Marchal
+
+I am a PhD student at Saarland University in Vera Demberg's lab. My work focuses on the role of relational and contextual cues in processing discourse relations, but I am interested in anything remotely related to this. In my research, I try to combine various methodologies: I conduct corpus research and psycholinguistic experiments, in which I use both on-line and off-line tasks.
 
 Vinicius XX
