--- a/team.Rmd
+++ b/team.Rmd
@@ -4,11 +4,11 @@ title: "Who we are"
 
 Our interest group was founded in 2023 by Clare Patterson, Marian Marchal, and Vinicius Macuch Silva.
 
-**Clare XX**
+**Clare Patterson**
 
 **Marian Marchal**
 
-I am a PhD student at Saarland University in Vera Demberg's lab. My work focuses on the role of relational and contextual cues in processing discourse relations, but I am interested in anything remotely related to this. In my research, I try to combine various methodologies: I conduct corpus research and psycholinguistic experiments, in which I use both on-line and off-line tasks.
+I'm a PhD student at Saarland University in Vera Demberg's lab. My work focuses on the role of relational and contextual cues in processing discourse relations, but I am interested in anything remotely related to this. In my research, I often combine various psycholinguistic tasks (e.g. self-paced reading, comprehension) to test my hypotheses. These hypotheses are often inspired by corpus research and cognitive models of language processing.
 
 **Vinicius Macuch Silva**
 
