--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -2,11 +2,27 @@
 title: "Meetings"
 ---
 
-Below is a list of past and upcoming meetings of our interest group. We meet 3-4 times a term, always virtually. Do get in touch with us if you'd like to discuss options for presenting at one of our meetings!
+We will kick off our interest group with an online mini-series this winter semester. You can find our upcoming and past meetings below.
 
+## Upcoming meetings
 
-**Upcoming meetings - Winter term 2023**
+### October 18
+**Chris Cummins**, ***University of Edinburgh***
 
-**Past meetings**
+**Abstract**
+
+### November 15 - TBD
+
+### December 6
+**Vera Demberg**, ***Saarland University***
+
+Vera Demberg is a Professor of Computer Science and Computational Linguistics at Saarland University.
+She has been working discourse and pragmatics in both the SFB1102 'Information Density and Linguistic Encoding' as well as the ERC-funded 'Individualized Interaction in Discourse'.
+In her research, she combines both experimental and computational approaches to discourse and pragmatics in order to develop cognitive models of human language understanding.
+
+**Abstract**
+Available soon.
+
+## Past meetings
 
 
