--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -10,14 +10,15 @@ We will kick off our interest group with an online mini-series this winter semes
 **Chris Cummins**, ***University of Edinburgh***
 
 **Abstract**
+Available soon.
 
-### November 15 - TBD
+### November 15 - TBA
 
 ### December 6
 **Vera Demberg**, ***Saarland University***
 
 Vera Demberg is a Professor of Computer Science and Computational Linguistics at Saarland University.
-She has been working discourse and pragmatics in both the SFB1102 'Information Density and Linguistic Encoding' as well as the ERC-funded 'Individualized Interaction in Discourse'.
+She has been working on discourse and pragmatics with her team in both the SFB1102 'Information Density and Linguistic Encoding' as well as the ERC-funded 'Individualized Interaction in Discourse'.
 In her research, she combines both experimental and computational approaches to discourse and pragmatics in order to develop cognitive models of human language understanding.
 
 **Abstract**
