changed index page

--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -9,6 +9,10 @@ We will kick off our interest group with an online mini-series this winter semes
 ### October 18
 **Chris Cummins**, ***University of Edinburgh***
 
+Chris Cummins is a Reader in Linguistics and English Language at the University of Edinburgh. His research is mostly in experimental semantics and pragmatics, focusing on why speakers choose to use particular linguistic forms, and how hearers interpret this.
+
+In his ongoing work, he's continuing to explore how we communicate about quantity, as well as how we make decisions based on our understanding of what a speaker has told us, for instance in high-stakes domains such as financial and medical interactions. He's particularly interested in how we infer additional features of the situation, such as the speaker's knowledge state and potentially their argumentative agenda, from the utterance, and how this feeds into decision-making.
+
 **Abstract**
 Available soon.
 
