--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -16,7 +16,11 @@ In his ongoing work, he's continuing to explore how we communicate about quantit
 **Abstract**
 Available soon.
 
-### November 15 - TBA
+### November 15
+**Ingmar Brilmayer**, ***University of Cologne***
+
+**Abstract**
+Available soon.
 
 ### December 6
 **Vera Demberg**, ***Saarland University***
