--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -19,6 +19,8 @@ Available soon.
 ### November 15
 **Ingmar Brilmayer**, ***University of Cologne***
 
+Ingmar Brilmayer is a postdoctoral researcher at the University of Cologne’s Xlinc Lab on the project “Communication Electrified” (Volkswagen Stiftung). There he has built a lab which combines mobile EEG and eye-tracking recordings in naturalistic interactions. His research interests are in the neurobiological basis of language processing and in neuropsychological correlates of referential processes in natural settings, as well as individual differences and predictive processes that underpin language processing.
+
 **Abstract**
 Available soon.
 
