--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -2,11 +2,11 @@
 title: "Meetings"
 ---
 
-We will kick off our interest group with an online mini-series this winter semester. You can find our upcoming and past meetings below.
+We will kick off our interest group with an online mini-series this winter semester. You can find our upcoming and past meetings below. To join these sessions, please send an email to  'discomatix [dot] group [at] gmail [dot] com'.
 
 ## Upcoming meetings
 
-### October 18
+### October 18 - 16:00-16:50 CEST
 **Chris Cummins**, ***University of Edinburgh***
 
 Chris Cummins is a Reader in Linguistics and English Language at the University of Edinburgh. His research is mostly in experimental semantics and pragmatics, focusing on why speakers choose to use particular linguistic forms, and how hearers interpret this.
@@ -16,7 +16,7 @@ In his ongoing work, he's continuing to explore how we communicate about quantit
 **Abstract**
 Available soon.
 
-### November 15
+### November 15 - 16:00-16:50 CET
 **Ingmar Brilmayer**, ***University of Cologne***
 
 Ingmar Brilmayer is a postdoctoral researcher at the University of Cologne’s Xlinc Lab on the project “Communication Electrified” (Volkswagen Stiftung). There he has built a lab which combines mobile EEG and eye-tracking recordings in naturalistic interactions. His research interests are in the neurobiological basis of language processing and in neuropsychological correlates of referential processes in natural settings, as well as individual differences and predictive processes that underpin language processing.
@@ -24,7 +24,7 @@ Ingmar Brilmayer is a postdoctoral researcher at the University of Cologne’s X
 **Abstract**
 Available soon.
 
-### December 6
+### December 6 - 16:00-16:50 CET
 **Vera Demberg**, ***Saarland University***
 
 Vera Demberg is a Professor of Computer Science and Computational Linguistics at Saarland University.
