--- a/team.Rmd
+++ b/team.Rmd
@@ -2,6 +2,15 @@
 title: "Who we are"
 ---
 
+<style>
+body {
+  text-align: justify}
+
+h1 {
+  text-align: center
+}
+</style>
+
 Our interest group was founded in 2023 by Clare Patterson, Marian Marchal, and Vinicius Macuch Silva.
 
 **Clare Patterson**
@@ -15,6 +24,6 @@ I'm a PhD student at Saarland University in Vera Demberg's lab. My work focuses 
 
 **Vinicius Macuch Silva**
 
-Vinicius is a post-doctoral researcher working with Bodo Winter at the Department of English Language and Linguistics, University of Birmingham.
+I'm a post-doctoral researcher working with Bodo Winter at the Department of English Language and Linguistics, University of Birmingham.
 
-He's interested in how people use language to create and manage meaning in communication, both when interacting with others and when producing and interpreting language in various other settings. In his research he uses primarily quantitative empirical methods, including controlled experimentation as well as computational and corpus analysis, to investigate issues related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
+I'm interested in how people use language to create and manage meaning in communication, both when interacting with others and when producing and interpreting language in various other settings. In my research I use primarily quantitative empirical methods, including controlled experimentation as well as computational and corpus analysis, to investigate issues related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
