--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -11,11 +11,14 @@ h1 {
 }
 </style>
 
-We kicked off our interest group with an online mini-series in the winter semester of 2023. In 2024 we will have a special winter event in February followed by another mini-series in the spring. You can find our upcoming and past meetings below. To join these sessions, please send an email to  'discomatix [dot] group [at] gmail [dot] com'.
+We kicked off our interest group with an online Autumn series in 2023. In 2024, we will have a special Winter Session in February, followed by a Spring Series, starting in March. You can find our upcoming and past meetings below. To join these session, please send an email to 'discomatix [dot] group [at] gmail [dot] com'.
 
 ## Upcoming meetings
 
-### February 6 - 14:00-14:50 CET
+### February 6 - Winter Session
+
+On Tuesday February 6 (16:00-16:50 CET) we'll have a special themed session on multimodality in discourse and pragmatics with 5-min flash talks by the speakers below. 
+
 **[Anita Slonimska](https://www.mpi.nl/people/slonimska-anita)**, ***Max Planck Institute of Psycholinguistics***
 
 **Rethinking communicative efficiency: insights from sign languages**\
@@ -34,7 +37,7 @@ We kicked off our interest group with an online mini-series in the winter semest
 ## Past meetings
 
 <details>
-<summary>Winter mini-series 2023</summary>
+<summary>**Autumn series 2023**</summary>
 
 <details>
 <summary>December 6 - **[Vera Demberg](https://www.uni-saarland.de/lehrstuhl/demberg/members/verademberg.html)**, ***Saarland University***</summary>
@@ -42,6 +45,8 @@ We kicked off our interest group with an online mini-series in the winter semest
 **Combining experimental work with computational modelling to better understand pragmatic processing**
 
 In this talk, I will argue that complementing experimental research with computational modelling can be highly beneficial for developing a deeper understanding of pragmatic processing in humans. I will illustrate this claim with an example from current research at our lab, where we investigated how comprehenders adapt to speaker-specific use of uncertainty expressions (e.g., one speaker uses the word “probably” rather generously in situations where the probability of the event is not all that high, vs. another speaker who uses the word “probably” more cautiously). Specifically, we were interested in individual differences between study participants with respect to how strongly they adapt their expectations / interpretations to how they have experienced the two speakers use uncertainty expressions like “probably”. We examined how any differences in adaptation are related to individual differences between participants (working memory updating, reasoning ability, linguistic experience, theory of mind abilities). In the experiment we found a correlation between adaptation strength and abilities in terms of working memory updating as measured by the keep track task. I will discuss our efforts in constructing a computational model of this effect, and what additional questions this exercise brought up.
+
+*For a recording of this talk, send us an email.*
 </details>
 
 <details>
@@ -50,6 +55,9 @@ In this talk, I will argue that complementing experimental research with computa
 **Combined eyetracking and EEG in an interactive setting: the what, the why and the wherefore**
 
 In this talk, I will talk about setup, data recording and data analysis in our interactive laboratory in Cologne. In the first part of the talk, I will talk about the requirements for interactive research in terms of hardware and software. In the second part of the talk, I will present two studies that we designed and conducted in our lab, the difficulties with building the experiment, as well as with data analysis that arise from the naturalistic design of the studies. In the last part, I will present results of these experiments, showing that, despite all the difficulties, it is worth the effort.
+
+*For a recording of this talk, send us an email.*
+
 </details>
 
 <details>
