updated flash talk titles, fixed logo

--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -21,7 +21,7 @@ On Tuesday February 6 (16:00-16:50 CET) we'll have a special themed session on m
 
 **[Anita Slonimska](https://www.mpi.nl/people/slonimska-anita)**, ***Max Planck Institute of Psycholinguistics***
 
-**Rethinking communicative efficiency: insights from sign languages**\
+**Rethinking communicative efficiency: Insights from sign languages**\
 \
 
 **[Jonas Nölle](https://scholar.google.co.uk/citations?user=iISC70gAAAAJ&hl=en)**, ***University of Glasgow***
@@ -31,7 +31,7 @@ On Tuesday February 6 (16:00-16:50 CET) we'll have a special themed session on m
 
 **[Schuyler Laparle](https://sites.google.com/view/schuyler-laparle/)**, ***Tilburg University***
 
-**The iconicity of abstract structure: gesturing discourse relations**
+**The iconicity of abstract structure: Gesturing discourse relations**
 
 
 ## Past meetings
