--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -11,7 +11,7 @@ h1 {
 }
 </style>
 
-We kicked off our interest group with an online Autumn series in 2023. In 2024, we will have a special Winter Session in February, followed by a Spring Series, starting in March. You can find our upcoming and past meetings below. To join these session, please send an email to 'discomatix [dot] group [at] gmail [dot] com'.
+We kicked off our interest group with an online Autumn series in 2023. In 2024, we will have a special Winter Session in February, followed by a Spring Series, starting in April. You can find our upcoming and past meetings below. To join these sessions, please send an email to 'discomatix [dot] group [at] gmail [dot] com'.
 
 ## Upcoming meetings
 
@@ -32,6 +32,15 @@ On Tuesday February 6 (16:00-16:50 CET) we'll have a special themed session on m
 **[Schuyler Laparle](https://sites.google.com/view/schuyler-laparle/)**, ***Tilburg University***
 
 **The iconicity of abstract structure: Gesturing discourse relations**
+
+
+### **Spring series 2024**
+
+April 9 - **[Nicole Gotzner](https://sites.google.com/view/nicolegotzner)**, ***Osnabrück University***
+
+May 14 - **Panel discussion, more details soon**
+
+June 11 - **[Tatjana Scheffler](https://tscheffler.github.io/)**, ***Ruhr-Universität Bochum***
 
 
 ## Past meetings
