--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -15,7 +15,9 @@ We kicked off our interest group with an online Autumn series in 2023. In 2024, 
 
 ## Upcoming meetings
 
-### **Spring series 2024**
+### **Spring series 2024** 
+
+**All sessions take place at 16:00 CET** 
 
 April 9 - **[Nicole Gotzner](https://sites.google.com/view/nicolegotzner)**, ***Osnabrück University***
 
@@ -49,6 +51,8 @@ On February 6 we had a special themed session on multimodality in discourse and 
 
 **The iconicity of abstract structure: Gesturing discourse relations**
 
+
+*For a recording of this session, send us an email.*
 </details>
 
 <details>
