--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -17,20 +17,33 @@ We kicked off our interest group with an online Autumn series in 2023. In 2024, 
 
 ### **Spring series 2024** 
 
-**All sessions take place at 16:00 CET** 
-
-April 9 - **[Nicole Gotzner](https://sites.google.com/view/nicolegotzner)**, ***Osnabrück University***
-
-**Bringing Grice to the lab: How to do interactive experiments on pragmatics and communication**
-
-Since Grice’s monumental proposal, communication is construed as a cooperative enterprise involving a speaker and a hearer. Yet most experimental research in Cognitive Science is monadic and this is at odds with the fact that communication is a joint activity (Pickering and Garrod, 2021). Moreover, it presents us with an empirical gap: almost no fair empirical test of the Gricean model exists. I will discuss two strands of research that try to close this gap. (1) Work on implicature with interactive dialog experiments (e.g. Gotzner and Benz, 2018; Benz and Gotzner, 2021) and (2) ongoing research on referential communication about concepts with Kristina Kobrock and Charlotte Uhlemann. At the end of my talk, I will briefly discuss how multi-agent modeling tools can be used to tackle core questions about communication.
+**All sessions take place at 16:00 CET**
 
 May 14 - **Panel discussion with [Ira Noveck](https://sites.google.com/site/iranoveck)**, ***Centre National de la Recherche Scientifique***, **[Napoleon Katsos](https://sites.google.com/site/napoleonkatsos/home)**, ***University of Cambridge***, **[Petra Schumacher](https://idsl1.phil-fak.uni-koeln.de/en/personen/professorenseiten/prof-dr-petra-b-schumacher)**, ***University of Cologne***
+
+**The past, present, and future of experimental pragmatics**
+
+For our special panel session we have invited three of the founding figures of the experimental pragmatics research program: Ira Noveck (Centre National de la Recherche Scientifique), Napoleon Katsos (University of Cambridge), and Petra Schumacher (University of Cologne). Their extensive experience in the field and varying backgrounds promise a lively discussion on some of the core questions in our field. The panelists will share their insights into questions related to the bridging of theory and experimental practice, methodology, as well as the current theoretical landscape and how it affects the future of experimental research on discourse and pragmatics, as well as questions from the audience. 
 
 June 11 - **[Tatjana Scheffler](https://tscheffler.github.io/)**, ***Ruhr-Universität Bochum***
 
 
 ## Past meetings
+
+<details>
+<summary>**Spring series 2024**</summary>
+
+<details>
+
+<summary>April 9 - **[Nicole Gotzner](https://sites.google.com/view/nicolegotzner)**, ***Osnabrück University***</summary>
+
+**Bringing Grice to the lab: How to do interactive experiments on pragmatics and communication**
+
+Since Grice’s monumental proposal, communication is construed as a cooperative enterprise involving a speaker and a hearer. Yet most experimental research in Cognitive Science is monadic and this is at odds with the fact that communication is a joint activity (Pickering and Garrod, 2021). Moreover, it presents us with an empirical gap: almost no fair empirical test of the Gricean model exists. I will discuss two strands of research that try to close this gap. (1) Work on implicature with interactive dialog experiments (e.g. Gotzner and Benz, 2018; Benz and Gotzner, 2021) and (2) ongoing research on referential communication about concepts with Kristina Kobrock and Charlotte Uhlemann. At the end of my talk, I will briefly discuss how multi-agent modeling tools can be used to tackle core questions about communication.
+
+*For a recording of this talk, send us an email.*
+</details>
+</details>
 
 <details>
 <summary>**Winter session 2024**</summary>
