--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -17,15 +17,16 @@ We kicked off our interest group with an online Autumn series in 2023. In 2024, 
 
 ### **Spring series 2024** 
 
-**All sessions take place at 16:00 CET**
-
-May 14 - **Panel discussion with [Ira Noveck](https://sites.google.com/site/iranoveck)**, ***Centre National de la Recherche Scientifique***, **[Napoleon Katsos](https://sites.google.com/site/napoleonkatsos/home)**, ***University of Cambridge***, **[Petra Schumacher](https://idsl1.phil-fak.uni-koeln.de/en/personen/professorenseiten/prof-dr-petra-b-schumacher)**, ***University of Cologne***
-
-**The past, present, and future of experimental pragmatics**
-
-For our special panel session we have invited three of the founding figures of the experimental pragmatics research program: Ira Noveck (Centre National de la Recherche Scientifique), Napoleon Katsos (University of Cambridge), and Petra Schumacher (University of Cologne). Their extensive experience in the field and varying backgrounds promise a lively discussion on some of the core questions in our field. The panelists will share their insights into questions related to the bridging of theory and experimental practice, methodology, as well as the current theoretical landscape and how it affects the future of experimental research on discourse and pragmatics, as well as questions from the audience. 
+**All sessions take place at 16:00 CEST**
 
 June 11 - **[Tatjana Scheffler](https://tscheffler.github.io/)**, ***Ruhr-Universität Bochum***
+
+**Experimental Approaches to the Semantics and Pragmatics of Emojis**
+
+Emojis are frequently used in digital communication: some estimates state that about every second chat message contains an emoji. This, together with the fact that they have replaced a range of other non-standard features of online writing, indicates that emojis fill a linguistic gap and carry important semantic and pragmatic information.
+Recently, linguists have started to address the specific semantic and pragmatic role of emojis not only theoretically and based on corpus data, but also experimentally. In the talk, I will present recent research we have carried out jointly with collaborators, investigating the meaning of different types of emojis using rating studies, but also self-paced reading and free text questions.
+
+In particular, I will report recent results on deriving semantic norms for face emojis (from four language communities) from human participants, and testing the subtle meaning differences between emojis that look visually similar. In this experiment, we compared emoji pairs with a visual difference that either does or does not correspond to a difference in human facial expressions according to an adaptation of the Facial Action Coding System. Our results show that the small differences between emoji pairs are meaningful in all pairs whether or not they correspond to human facial differences. This supports a lexicalist approach to emoji semantics, which treats face emojis as conventionalized signals rather than mere pictures of faces.
 
 
 ## Past meetings
@@ -34,7 +35,16 @@ June 11 - **[Tatjana Scheffler](https://tscheffler.github.io/)**, ***Ruhr-Univer
 <summary>**Spring series 2024**</summary>
 
 <details>
+<summary>May 14 - **Panel discussion with [Ira Noveck](https://sites.google.com/site/iranoveck)**, ***Centre National de la Recherche Scientifique***, **[Napoleon Katsos](https://sites.google.com/site/napoleonkatsos/home)**, ***University of Cambridge***, **[Petra Schumacher](https://idsl1.phil-fak.uni-koeln.de/en/personen/professorenseiten/prof-dr-petra-b-schumacher)**, ***University of Cologne***</summary>
 
+**The past, present, and future of experimental pragmatics**
+
+For our special panel session we have invited three of the founding figures of the experimental pragmatics research program: Ira Noveck (Centre National de la Recherche Scientifique), Napoleon Katsos (University of Cambridge), and Petra Schumacher (University of Cologne). Their extensive experience in the field and varying backgrounds promise a lively discussion on some of the core questions in our field. The panelists will share their insights into questions related to the bridging of theory and experimental practice, methodology, as well as the current theoretical landscape and how it affects the future of experimental research on discourse and pragmatics, as well as questions from the audience.
+
+*For a recording of this talk, send us an email.*
+</details>
+
+<details>
 <summary>April 9 - **[Nicole Gotzner](https://sites.google.com/view/nicolegotzner)**, ***Osnabrück University***</summary>
 
 **Bringing Grice to the lab: How to do interactive experiments on pragmatics and communication**
@@ -89,7 +99,6 @@ In this talk, I will argue that complementing experimental research with computa
 In this talk, I will talk about setup, data recording and data analysis in our interactive laboratory in Cologne. In the first part of the talk, I will talk about the requirements for interactive research in terms of hardware and software. In the second part of the talk, I will present two studies that we designed and conducted in our lab, the difficulties with building the experiment, as well as with data analysis that arise from the naturalistic design of the studies. In the last part, I will present results of these experiments, showing that, despite all the difficulties, it is worth the effort.
 
 *For a recording of this talk, send us an email.*
-
 </details>
 
 <details>
