--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -11,15 +11,25 @@ h1 {
 }
 </style>
 
-We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter session in February, and we are having a Spring series starting in April. You can find our upcoming and past meetings below. To join our sessions, please send an email to 'discomatix [dot] group [at] gmail [dot] com'.
+We kicked off our interest group with an online Autumn series in 2023. In 2024, we had a special Winter session in February and a Spring series between April and June. Starting in October 2024 we are having an Autumn series. You can find our upcoming and past meetings below. To join our sessions, please send an email to 'discomatix [dot] group [at] gmail [dot] com'.
 
 ## Upcoming meetings
 
-### **Spring series 2024** 
+### **Autumn series 2024** 
 
-**All sessions take place at 16:00 CEST**
+**All sessions take place at 16:00 CET**
 
-June 11 - **[Tatjana Scheffler](https://tscheffler.github.io/)**, ***Ruhr-Universität Bochum***
+
+
+
+## Past meetings
+
+
+<details>
+<summary>**Spring series 2024**</summary>
+
+<details>
+<summary>June 11 - **[Tatjana Scheffler](https://tscheffler.github.io/)**, ***Ruhr-Universität Bochum***</summary>
 
 **Experimental Approaches to the Semantics and Pragmatics of Emojis**
 
@@ -28,11 +38,8 @@ Recently, linguists have started to address the specific semantic and pragmatic 
 
 In particular, I will report recent results on deriving semantic norms for face emojis (from four language communities) from human participants, and testing the subtle meaning differences between emojis that look visually similar. In this experiment, we compared emoji pairs with a visual difference that either does or does not correspond to a difference in human facial expressions according to an adaptation of the Facial Action Coding System. Our results show that the small differences between emoji pairs are meaningful in all pairs whether or not they correspond to human facial differences. This supports a lexicalist approach to emoji semantics, which treats face emojis as conventionalized signals rather than mere pictures of faces.
 
-
-## Past meetings
-
-<details>
-<summary>**Spring series 2024**</summary>
+*For a recording of this talk, send us an email.*
+</details>
 
 <details>
 <summary>May 14 - **Panel discussion with [Ira Noveck](https://sites.google.com/site/iranoveck)**, ***Centre National de la Recherche Scientifique***, **[Napoleon Katsos](https://sites.google.com/site/napoleonkatsos/home)**, ***University of Cambridge***, **[Petra Schumacher](https://idsl1.phil-fak.uni-koeln.de/en/personen/professorenseiten/prof-dr-petra-b-schumacher)**, ***University of Cologne***</summary>
