--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -15,9 +15,15 @@ We kicked off our interest group with an online Autumn series in 2023. In 2024, 
 
 ## Upcoming meetings
 
-### **Autumn series 2024** 
+### **Autumn series 2024**
 
-**All sessions take place at 16:00 CET**
+October 15 - **[Gareth Carrol](https://www.birmingham.ac.uk/staff/profiles/elal/carrol-gareth)** - TBA
+
+November 19 - **[Paula Rubio-Fernández](https://www.mpi.nl/people/rubio-fernandez-paula)** - TBA
+
+December 10 - **[Irene Mognon]()** and **[Petra Hendriks](https://www.let.rug.nl/~hendriks/personal/index.html)** - TBA
+
+**All sessions take place at 16:00 CE(S)T**
 
 
 
