--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -21,7 +21,7 @@ October 15 - **[Gareth Carrol](https://www.birmingham.ac.uk/staff/profiles/elal/
 
 November 19 - **[Paula Rubio-Fernández](https://www.mpi.nl/people/rubio-fernandez-paula)** - TBA
 
-December 10 - **[Irene Mognon]()** and **[Petra Hendriks](https://www.let.rug.nl/~hendriks/personal/index.html)** - TBA
+December 10 - **[Irene Mognon](https://irenemognon.eu/)** and **[Petra Hendriks](https://www.let.rug.nl/~hendriks/personal/index.html)** - TBA
 
 **All sessions take place at 16:00 CE(S)T**
 
