--- a/meetings.Rmd
+++ b/meetings.Rmd
@@ -17,7 +17,9 @@ We kicked off our interest group with an online Autumn series in 2023. In 2024, 
 
 ### **Autumn series 2024**
 
-October 15 - **[Gareth Carrol](https://www.birmingham.ac.uk/staff/profiles/elal/carrol-gareth)** - **He’s a real weasel: designing a way to investigate markers of stance and metaphorical meaning with different reading measures**
+October 15 - **[Gareth Carrol](https://www.birmingham.ac.uk/staff/profiles/elal/carrol-gareth)**, **University of Birmingham**
+
+**He’s a real weasel: designing a way to investigate markers of stance and metaphorical meaning with different reading measures**
 
 In this talk I will discuss an ongoing work-in-progress project (with Vinicius Macuch) looking at the interpretation of words like “real”, which can convey literal or non-literal meaning (in this case, serving a more pragmatic role as an intensifier in examples like “a real piece of work” or “a real weasel”). We are interested in how readers interpret “real” as a part of incremental, online processing, and how this interacts with aspects such as conventionality (i.e. whether the thing being intensified has a clear, established metaphorical meaning). The focus of this talk is how we can design a study to investigate this, focusing on aspects like how specific word choices / combinations might change interpretations, how more / less conventionalised meanings might lead to different outcomes, and how other cues might need to be controlled and / or manipulated. I will also consider how and why different methods – online self-paced reading vs. lab-based eye-tracking while reading - might give complementary results, and what this means for the design of stimuli.
 
