--- a/team.Rmd
+++ b/team.Rmd
@@ -24,6 +24,6 @@ I'm a PhD student at Saarland University in Vera Demberg's lab. My work focuses 
 
 **Vinicius Macuch Silva**
 
-I'm a post-doctoral researcher working with Bodo Winter at the Department of English Language and Linguistics, University of Birmingham.
+I'm a post-doctoral fellow working in the Visual Communication (ViCom) Priority Programme.
 
 I'm interested in how people use language to create meaning in communication, both when interacting with others and when producing and interpreting language in various other settings. In my research I use primarily quantitative empirical methods, including controlled experimentation as well as computational and corpus analysis, to investigate issues related to pragmatic inferencing, strategic communication, argumentation and stance-taking, as well as expressive and affective meaning.
